# rust-backend

./: README.md
api/: .env.example  Cargo.toml  README.md
api/src/: auth.rs  errors.rs  main.rs  states.rs
api/src/dto/: requests.rs  responses.rs
api/src/models/: mod.rs  post.rs  user.rs
api/src/routes/: health.rs  mod.rs  post.rs  user.rs
