[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = {version = "0.8.7", features = ["macros"]}

# Async runtime
tokio = {version = "1.48.0", features = ["full"]}

# Middleware
tower = {version = "0.5.2", features = ["limit", "timeout"]}
tower-http = {version = "0.6.6", features = ["cors", "trace"]}

# Serialization/Deserialization
serde = {version = "1.0.228", features= ["derive"]}
serde_json = "1.0.145"

# JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Password hashing
bcrypt = "0.17.1"

# UUID 
uuid = {version = "1.18.1", features = ["v4", "serde"]}

# Date/time handling
chrono = {version = "0.4.42", features = ["serde"]}

# Logging
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}

# Environment variables
dotenvy = "0.15.7"

# Validation
validator = {version = "0.20.0", features = ["derive"]}

# Rate limiting
governor = "0.10.2"

# Database
dashmap = "6.1.0"